syntax = "proto3";
package com.example.configserver.protoController;
import "google/protobuf/empty.proto";
message Data {
  string key = 1;
  string value = 2;
}

message Config {
  string service = 1;
  repeated Data data = 2;
}

message Service {
  string name = 1;
}

message ArrayConfig {
  repeated Config config = 1;
}

message ResponseService {
  string response = 1;
}

message NameService {
  string  name = 1;
}

message ResponseConfig {
  string response = 1;
}

message NameConfig {
  string name = 1;
}
message NameAndVersion {
  string name = 1;
  int32 version = 2;
}
service ConfigService {
  rpc addConfig(Config) returns (ResponseConfig);
  rpc getConfig(NameConfig) returns (ResponseConfig);
  rpc updateConfig(Config) returns (ResponseConfig);
  rpc deleteConfig(NameAndVersion) returns (ResponseConfig);
  rpc getAllConfig(google.protobuf.Empty) returns (ArrayConfig);
  rpc getVersionConfig(NameAndVersion) returns (ResponseConfig);
}

service ServiceService {
  rpc addService(Service) returns (ResponseService);
  rpc getService(NameService) returns (ResponseService);
  rpc deleteService(NameService) returns (ResponseService);
  rpc getAllConfigs(NameService) returns (ArrayConfig);
}